package model.component;

public class Clue {
    /*
     *  if ((currentTurn != TurnState.BlueSpy) && (currentTurn != TurnState.RedSpy)) {
     *             System.out.println("A clue was given when it wasn't a spymasters turn -- this should never happen -- ignoring clue");
     *             return;
     *         }
     *         currentClue = clueWord;
     *         currentClueNum = clueNum;
     *
     *         currentTurn = nextTurn();
     *         // TODO: Alert the view that the clue has changed and the TurnState has changed
     *     }
     */
}
