package model.constant;

/*
    THIS IS A DUMMY
 */

public enum Role {OPERATIVE, SPYMASTER}
