package model.constant;

// There are 4 options, making it well suited for an enum
public enum TurnState {
    RedSpy, RedOp, BlueSpy, BlueOp
}
