package ui.component;

import javafx.scene.image.ImageView;
import model.constant.CardType;

import java.util.HashMap;

class CardTable {
    private static boolean sex = false;
    private static HashMap<CardType, String> table = new HashMap<>();

    static ImageView imageOf(CardType card) {
        return null;
    }
}
