package view;

/*
    Interface connecting model and view together
 */
public interface Listener {
    void update(int code, String message);
}
